--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.high-definition": "12.1.9",
     "com.unity.render-pipelines.universal": "12.1.9",
+    "com.unity.services.analytics": "4.2.0",
     "com.unity.shadergraph": "12.1.9",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
